--- a/index.html
+++ b/index.html
@@ -11,34 +11,14 @@ body{font-family:Arial;background:#ece5dd}
 .container{display:flex;height:100vh}
 
 /* SIDEBAR */
-.sidebar{
-width:280px;
-background:#075e54;
-color:#fff;
-flex-shrink:0;
-}
+.sidebar{width:280px;background:#075e54;color:#fff}
 .sidebar h2{padding:20px;text-align:center}
-.contact{
-display:flex;
-align-items:center;
-padding:10px 20px;
-cursor:pointer;
-}
-.contact img{
-width:40px;
-height:40px;
-border-radius:50%;
-margin-right:10px;
-}
+.contact{display:flex;align-items:center;padding:10px 20px;cursor:pointer}
+.contact img{width:40px;height:40px;border-radius:50%;margin-right:10px}
 .contact:hover{background:#128c7e}
 
 /* CHAT */
-.chat{
-flex:1;
-display:flex;
-flex-direction:column;
-background:#dadada;
-}
+.chat{flex:1;display:flex;flex-direction:column;background:#dadada}
 .chat-header{
 padding:10px 15px;
 background:#ededed;
@@ -46,12 +26,8 @@ display:flex;
 align-items:center;
 gap:10px;
 }
-.back{
-display:none;
-cursor:pointer;
-font-size:18px;
-}
-.status{font-size:12px;color:green}
+.back{display:none;cursor:pointer;font-size:18px}
+.status{font-size:12px;color:green;margin-top:2px}
 
 .messages{
 flex:1;
@@ -61,30 +37,12 @@ display:flex;
 flex-direction:column;
 }
 
-.message-container{
-display:flex;
-margin-bottom:10px;
-align-items:flex-end;
-}
-.message{
-max-width:75%;
-padding:10px;
-border-radius:8px;
-}
+.message-container{display:flex;margin-bottom:10px;align-items:flex-end}
+.message{max-width:75%;padding:10px;border-radius:8px}
 .sent{background:#dcf8c6}
 .received{background:#fff}
-.avatar{
-width:32px;
-height:32px;
-border-radius:50%;
-margin:0 8px;
-}
-.time{
-font-size:10px;
-color:gray;
-display:block;
-text-align:right;
-}
+.avatar{width:32px;height:32px;border-radius:50%;margin:0 8px}
+.time{font-size:10px;color:gray;display:block;text-align:right}
 
 /* INPUT */
 .input-area{
@@ -110,31 +68,25 @@ font-size:16px;
 }
 .send{background:#25d366;color:#fff}
 
-/* 📱 MOBILE */
+/* DARK MODE */
+.dark body{background:#111}
+.dark .sidebar{background:#1f2c33}
+.dark .chat{background:#0b141a}
+.dark .chat-header{background:#1f2c33;color:#fff}
+.dark .received{background:#1f2c33;color:#fff}
+.dark .sent{background:#005c4b;color:#fff}
+.dark .input-area{background:#1f2c33}
+.dark input,.dark select{background:#2a3942;color:#fff;border:none}
+
+/* MOBILE */
 @media(max-width:768px){
 .container{flex-direction:column}
-.sidebar{
-width:100%;
-height:100vh;
-}
-.chat{
-display:none;
-height:100vh;
-}
+.sidebar{width:100%;height:100vh}
+.chat{display:none;height:100vh}
 .chat.active{display:flex}
 .sidebar.hide{display:none}
 .back{display:block}
 }
-
-
-.chat-header button{
-border:none;
-background:none;
-font-size:18px;
-cursor:pointer;
-}
-
-
 </style>
 </head>
 
@@ -142,7 +94,6 @@ cursor:pointer;
 
 <div class="container">
 
-<!-- SIDEBAR -->
 <div class="sidebar" id="sidebar">
 <h2>WhatsApp</h2>
 
@@ -159,7 +110,6 @@ cursor:pointer;
 </div>
 </div>
 
-<!-- CHAT -->
 <div class="chat" id="chat">
 <div class="chat-header">
 <span class="back" onclick="goBack()">⬅</span>
@@ -174,7 +124,6 @@ cursor:pointer;
 <button onclick="clearChat()">🗑</button>
 </div>
 </div>
-
 
 <div class="messages" id="messages"></div>
 
@@ -207,6 +156,7 @@ let sidebar=document.getElementById("sidebar");
 let chatBox=document.getElementById("chat");
 let currentChat=null;
 let mediaRecorder,chunks=[];
+let typingTimer=null;
 
 const avatars={
 me:"file:///C:/Users/PC306.9/Downloads/close-up-portrait-tiger_1048944-9140467.avif",
@@ -218,6 +168,8 @@ function openChat(name){
 currentChat=name;
 chatNameEl.innerText=name;
 messages.innerHTML=localStorage.getItem("chat_"+name)||"";
+status.innerText="онлайн";
+if(typingTimer) clearTimeout(typingTimer);
 sidebar.classList.add("hide");
 chatBox.classList.add("active");
 }
@@ -232,7 +184,7 @@ let box=document.createElement("div");
 box.className="message-container";
 let msg=document.createElement("div");
 msg.className="message "+(user==="me"?"sent":"received");
-msg.innerHTML=html+`<span class="time">${new Date().toLocaleTimeString().slice(0,5)}</span>`;
+msg.innerHTML=html+`<span class="time">${new Date().toLocaleTimeString().slice(0,5)} ✓✓</span>`;
 let av=document.createElement("img");
 av.src=avatars[user];
 av.className="avatar";
@@ -276,23 +228,29 @@ addMessage(`<audio controls src="${url}"></audio>`,user.value);
 }
 
 function addEmoji(){ text.value+="😊"; }
-let typingTimer;
 
 function typing(){
-    let user = document.getElementById("user").value;
-
-    if(user !== "me"){
-        status.innerText = user === "friend"
-            ? "Екінші адам жазып жатыр..."
-            : "Үшінші адам жазып жатыр...";
-    }
-
-    clearTimeout(typingTimer);
-    typingTimer = setTimeout(()=>{
-        status.innerText = "онлайн";
-    }, 1500);
+let u=user.value;
+if(u==="me") return;
+status.innerText=u==="friend"
+?"Екінші адам жазып жатыр..."
+:"Үшінші адам жазып жатыр...";
+if(typingTimer) clearTimeout(typingTimer);
+typingTimer=setTimeout(()=>status.innerText="онлайн",1500);
 }
 
+function toggleDark(){
+document.documentElement.classList.toggle("dark");
+}
+
+function clearChat(){
+if(!currentChat) return;
+if(confirm("Чатты толық өшіресің бе?")){
+localStorage.removeItem("chat_"+currentChat);
+messages.innerHTML="";
+status.innerText="онлайн";
+}
+}
 </script>
 
 </body>
